@startuml seller-status-state-diagram

' SellerProfile.connectStatus lifecycle.
' Per-payment lifecycle is tracked on Payment.status, not here, to avoid
' confusing "seller account state" with "single transaction state".

[*] --> NONE : User row created\n(no SellerProfile yet)

NONE --> PENDING : POST /sellers/onboarding\n→ stripe.accounts.create()\n+ stripe.accountLinks.create()

PENDING --> PENDING : Seller opens onboarding link\nbut hasn't submitted

PENDING --> RESTRICTED : webhook account.updated\nrequirements.disabled_reason set\n(missing ID / failed KYC)

PENDING --> ACTIVE : webhook account.updated\nchargesEnabled && payoutsEnabled

RESTRICTED --> PENDING : Seller re-opens onboarding link\nand resubmits

RESTRICTED --> REJECTED : Stripe permanently disables\n(disabled_reason = "rejected.*")

ACTIVE --> RESTRICTED : New requirement added\n(e.g. tax info due in N days)\nfuture_requirements becomes currently_due

ACTIVE --> ACTIVE : Sell, get paid, get paid out\n(transaction lifecycle on Payment)

REJECTED --> [*]

note right of NONE
  No Stripe connected account yet.
  Seller can browse, buy, list as free —
  cannot accept paid orders.
end note

note right of PENDING
  Stripe account exists.
  chargesEnabled / payoutsEnabled = false.
  We MUST block /checkout against this seller.
end note

note right of ACTIVE
  chargesEnabled = true
  payoutsEnabled = true
  detailsSubmitted = true
  requirementsCurrentlyDue = []
  → can be a destination on PaymentIntents.
end note

note right of RESTRICTED
  Live account but capability paused.
  Surface requirementsCurrentlyDue
  in the UI so seller knows what to fix.
end note

note right of REJECTED
  Terminal. Stripe will not reinstate.
  Admin intervention or new account needed.
end note

@enduml
